"""WASI-NN WIT interfaces following rules_wasm_component patterns"""

load("@rules_wasm_component//wit:defs.bzl", "wit_library")

package(default_visibility = ["//visibility:public"])

# WASI-NN base interfaces - define the core package
wit_library(
    name = "wasi_nn_interfaces",
    package_name = "wasi:nn@0.2.0-rc-2024-10-28",
    srcs = ["wasi-nn.wit"],
)