"""Behavior Prediction AI Component - Optimized Build with ADAS macros"""

load("//adas-build:adas_component.bzl", "adas_ai_component")

package(default_visibility = ["//visibility:public"])

# Behavior Prediction AI Component with WASI-NN integration
adas_ai_component(
    name = "behavior_prediction_ai",
    srcs = ["src/lib.rs", "src/social_lstm.rs", "src/trajectory.rs"],
    wit_world = "wit/world.wit",
    package_name = "adas:behavior-prediction",
)