[package]
name = "adas-behavior_prediction_ai"
version = "0.1.0"
edition = "2021"
description = "Social-LSTM behavior prediction AI using WASI-NN"
license = "Apache-2.0"


[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "adas:behavior-prediction"

[dependencies]
wit-bindgen = { workspace = true }
ndarray = { workspace = true }
lazy_static = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration for building WASM components
# Profile configuration inherited from workspace
