"""Object Detection AI Component - Bazel Build"""

load("@rules_wasm_component//wit:defs.bzl", "wit_library")
load("@rules_wasm_component//rust:defs.bzl", "rust_wasm_component_bindgen", "rust_wasm_component_test")

package(default_visibility = ["//visibility:public"])

# WIT interfaces for component
wit_library(
    name = "object_detection_ai_interfaces",
    srcs = ["wit/world.wit"],
    package_name = "adas:object-detection",
)

# Build component
rust_wasm_component_bindgen(
    name = "object_detection_ai",
    srcs = ["src/lib.rs"],
    wit = ":object_detection_ai_interfaces",
    profiles = ["debug", "release"],
)

# Test the component
rust_wasm_component_test(
    name = "object_detection_ai_test",
    component = ":object_detection_ai",
)
