"""Object Detection AI Component - Optimized Build with ADAS macros"""

load("//adas-build:adas_component.bzl", "adas_ai_component")

package(default_visibility = ["//visibility:public"])

# Object Detection AI Component with WASI-NN integration
adas_ai_component(
    name = "object_detection_ai",
    srcs = ["src/lib.rs"],
    wit_world = "wit/world.wit",
    model_files = [
        "models/yolov5n.onnx",
        "//models:yolov5n.onnx",  # Reference to shared model
    ],
    package_name = "adas:object-detection",
)